// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should test a default HCDraggable 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="MuiScopedCssBaseline-root css-1rgmn6t-MuiScopedCssBaseline-root"
        style="height: 100%;"
      >
        <div
          class="MuiBox-root css-0"
          data-rbd-droppable-context-id="0"
          data-rbd-droppable-id="list"
        >
          <div
            aria-describedby="rbd-hidden-text-0-hidden-text-0"
            data-rbd-drag-handle-context-id="0"
            data-rbd-drag-handle-draggable-id="1"
            data-rbd-draggable-context-id="0"
            data-rbd-draggable-id="1"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <div
              aria-label="Item 1"
              class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters css-nxv30a-MuiButtonBase-root-MuiListItemButton-root"
              data-mui-internal-clone-element="true"
              role="button"
              tabindex="0"
            >
              <div
                class="MuiListItemText-root css-tlelie-MuiListItemText-root"
              >
                <span
                  class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-1bn3ev3-MuiTypography-root"
                >
                  1
                  _
                  Item 1
                </span>
              </div>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </div>
          </div>
          <div
            aria-describedby="rbd-hidden-text-0-hidden-text-0"
            data-rbd-drag-handle-context-id="0"
            data-rbd-drag-handle-draggable-id="2"
            data-rbd-draggable-context-id="0"
            data-rbd-draggable-id="2"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <div
              aria-label="Item 2"
              class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters css-nxv30a-MuiButtonBase-root-MuiListItemButton-root"
              data-mui-internal-clone-element="true"
              role="button"
              tabindex="0"
            >
              <div
                class="MuiListItemText-root css-tlelie-MuiListItemText-root"
              >
                <span
                  class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-1bn3ev3-MuiTypography-root"
                >
                  2
                  _
                  Item 2
                </span>
              </div>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </div>
          </div>
          <div
            aria-describedby="rbd-hidden-text-0-hidden-text-0"
            data-rbd-drag-handle-context-id="0"
            data-rbd-drag-handle-draggable-id="3"
            data-rbd-draggable-context-id="0"
            data-rbd-draggable-id="3"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <div
              aria-label="Item 3"
              class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters css-nxv30a-MuiButtonBase-root-MuiListItemButton-root"
              data-mui-internal-clone-element="true"
              role="button"
              tabindex="0"
            >
              <div
                class="MuiListItemText-root css-tlelie-MuiListItemText-root"
              >
                <span
                  class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-1bn3ev3-MuiTypography-root"
                >
                  3
                  _
                  Item 3
                </span>
              </div>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </div>
          </div>
          <div
            aria-describedby="rbd-hidden-text-0-hidden-text-0"
            data-rbd-drag-handle-context-id="0"
            data-rbd-drag-handle-draggable-id="4"
            data-rbd-draggable-context-id="0"
            data-rbd-draggable-id="4"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <div
              aria-label="Item 4"
              class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters css-nxv30a-MuiButtonBase-root-MuiListItemButton-root"
              data-mui-internal-clone-element="true"
              role="button"
              tabindex="0"
            >
              <div
                class="MuiListItemText-root css-tlelie-MuiListItemText-root"
              >
                <span
                  class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-1bn3ev3-MuiTypography-root"
                >
                  4
                  _
                  Item 4
                </span>
              </div>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-atomic="true"
      aria-live="assertive"
      id="rbd-announcement-0"
      style="position: absolute; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%);"
    />
    <div
      id="rbd-hidden-text-0-hidden-text-0"
      style="display: none;"
    >
      
  Press space bar to start a drag.
  When dragging you can use the arrow keys to move the item around and escape to cancel.
  Some screen readers may require you to be in focus mode or to use your pass through key

    </div>
  </body>,
  "container": <div>
    <div
      class="MuiScopedCssBaseline-root css-1rgmn6t-MuiScopedCssBaseline-root"
      style="height: 100%;"
    >
      <div
        class="MuiBox-root css-0"
        data-rbd-droppable-context-id="0"
        data-rbd-droppable-id="list"
      >
        <div
          aria-describedby="rbd-hidden-text-0-hidden-text-0"
          data-rbd-drag-handle-context-id="0"
          data-rbd-drag-handle-draggable-id="1"
          data-rbd-draggable-context-id="0"
          data-rbd-draggable-id="1"
          draggable="false"
          role="button"
          tabindex="0"
        >
          <div
            aria-label="Item 1"
            class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters css-nxv30a-MuiButtonBase-root-MuiListItemButton-root"
            data-mui-internal-clone-element="true"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiListItemText-root css-tlelie-MuiListItemText-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-1bn3ev3-MuiTypography-root"
              >
                1
                _
                Item 1
              </span>
            </div>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </div>
        </div>
        <div
          aria-describedby="rbd-hidden-text-0-hidden-text-0"
          data-rbd-drag-handle-context-id="0"
          data-rbd-drag-handle-draggable-id="2"
          data-rbd-draggable-context-id="0"
          data-rbd-draggable-id="2"
          draggable="false"
          role="button"
          tabindex="0"
        >
          <div
            aria-label="Item 2"
            class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters css-nxv30a-MuiButtonBase-root-MuiListItemButton-root"
            data-mui-internal-clone-element="true"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiListItemText-root css-tlelie-MuiListItemText-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-1bn3ev3-MuiTypography-root"
              >
                2
                _
                Item 2
              </span>
            </div>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </div>
        </div>
        <div
          aria-describedby="rbd-hidden-text-0-hidden-text-0"
          data-rbd-drag-handle-context-id="0"
          data-rbd-drag-handle-draggable-id="3"
          data-rbd-draggable-context-id="0"
          data-rbd-draggable-id="3"
          draggable="false"
          role="button"
          tabindex="0"
        >
          <div
            aria-label="Item 3"
            class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters css-nxv30a-MuiButtonBase-root-MuiListItemButton-root"
            data-mui-internal-clone-element="true"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiListItemText-root css-tlelie-MuiListItemText-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-1bn3ev3-MuiTypography-root"
              >
                3
                _
                Item 3
              </span>
            </div>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </div>
        </div>
        <div
          aria-describedby="rbd-hidden-text-0-hidden-text-0"
          data-rbd-drag-handle-context-id="0"
          data-rbd-drag-handle-draggable-id="4"
          data-rbd-draggable-context-id="0"
          data-rbd-draggable-id="4"
          draggable="false"
          role="button"
          tabindex="0"
        >
          <div
            aria-label="Item 4"
            class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters css-nxv30a-MuiButtonBase-root-MuiListItemButton-root"
            data-mui-internal-clone-element="true"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiListItemText-root css-tlelie-MuiListItemText-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-1bn3ev3-MuiTypography-root"
              >
                4
                _
                Item 4
              </span>
            </div>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`should test a default HCDraggable Row 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div
      aria-atomic="true"
      aria-live="assertive"
      id="rbd-announcement-0"
      style="position: absolute; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%);"
    />
    <div>
      <div
        class="MuiScopedCssBaseline-root css-1rgmn6t-MuiScopedCssBaseline-root"
        style="height: 100%;"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-spacing-md-3 css-1xgjpwf-MuiGrid-root"
          data-rbd-droppable-context-id="1"
          data-rbd-droppable-id="list"
        >
          <div
            aria-describedby="rbd-hidden-text-1-hidden-text-6"
            data-rbd-drag-handle-context-id="1"
            data-rbd-drag-handle-draggable-id="1"
            data-rbd-draggable-context-id="1"
            data-rbd-draggable-id="1"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <div
              aria-label="Item 1"
              class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters css-nxv30a-MuiButtonBase-root-MuiListItemButton-root"
              data-mui-internal-clone-element="true"
              role="button"
              tabindex="0"
            >
              <div
                class="MuiListItemText-root css-tlelie-MuiListItemText-root"
              >
                <span
                  class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-1bn3ev3-MuiTypography-root"
                >
                  1
                  _
                  Item 1
                </span>
              </div>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </div>
          </div>
          <div
            aria-describedby="rbd-hidden-text-1-hidden-text-6"
            data-rbd-drag-handle-context-id="1"
            data-rbd-drag-handle-draggable-id="2"
            data-rbd-draggable-context-id="1"
            data-rbd-draggable-id="2"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <div
              aria-label="Item 2"
              class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters css-nxv30a-MuiButtonBase-root-MuiListItemButton-root"
              data-mui-internal-clone-element="true"
              role="button"
              tabindex="0"
            >
              <div
                class="MuiListItemText-root css-tlelie-MuiListItemText-root"
              >
                <span
                  class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-1bn3ev3-MuiTypography-root"
                >
                  2
                  _
                  Item 2
                </span>
              </div>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </div>
          </div>
          <div
            aria-describedby="rbd-hidden-text-1-hidden-text-6"
            data-rbd-drag-handle-context-id="1"
            data-rbd-drag-handle-draggable-id="3"
            data-rbd-draggable-context-id="1"
            data-rbd-draggable-id="3"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <div
              aria-label="Item 3"
              class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters css-nxv30a-MuiButtonBase-root-MuiListItemButton-root"
              data-mui-internal-clone-element="true"
              role="button"
              tabindex="0"
            >
              <div
                class="MuiListItemText-root css-tlelie-MuiListItemText-root"
              >
                <span
                  class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-1bn3ev3-MuiTypography-root"
                >
                  3
                  _
                  Item 3
                </span>
              </div>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </div>
          </div>
          <div
            aria-describedby="rbd-hidden-text-1-hidden-text-6"
            data-rbd-drag-handle-context-id="1"
            data-rbd-drag-handle-draggable-id="4"
            data-rbd-draggable-context-id="1"
            data-rbd-draggable-id="4"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <div
              aria-label="Item 4"
              class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters css-nxv30a-MuiButtonBase-root-MuiListItemButton-root"
              data-mui-internal-clone-element="true"
              role="button"
              tabindex="0"
            >
              <div
                class="MuiListItemText-root css-tlelie-MuiListItemText-root"
              >
                <span
                  class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-1bn3ev3-MuiTypography-root"
                >
                  4
                  _
                  Item 4
                </span>
              </div>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-atomic="true"
      aria-live="assertive"
      id="rbd-announcement-1"
      style="position: absolute; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%);"
    />
    <div
      id="rbd-hidden-text-1-hidden-text-6"
      style="display: none;"
    >
      
  Press space bar to start a drag.
  When dragging you can use the arrow keys to move the item around and escape to cancel.
  Some screen readers may require you to be in focus mode or to use your pass through key

    </div>
  </body>,
  "container": <div>
    <div
      class="MuiScopedCssBaseline-root css-1rgmn6t-MuiScopedCssBaseline-root"
      style="height: 100%;"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-spacing-md-3 css-1xgjpwf-MuiGrid-root"
        data-rbd-droppable-context-id="1"
        data-rbd-droppable-id="list"
      >
        <div
          aria-describedby="rbd-hidden-text-1-hidden-text-6"
          data-rbd-drag-handle-context-id="1"
          data-rbd-drag-handle-draggable-id="1"
          data-rbd-draggable-context-id="1"
          data-rbd-draggable-id="1"
          draggable="false"
          role="button"
          tabindex="0"
        >
          <div
            aria-label="Item 1"
            class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters css-nxv30a-MuiButtonBase-root-MuiListItemButton-root"
            data-mui-internal-clone-element="true"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiListItemText-root css-tlelie-MuiListItemText-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-1bn3ev3-MuiTypography-root"
              >
                1
                _
                Item 1
              </span>
            </div>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </div>
        </div>
        <div
          aria-describedby="rbd-hidden-text-1-hidden-text-6"
          data-rbd-drag-handle-context-id="1"
          data-rbd-drag-handle-draggable-id="2"
          data-rbd-draggable-context-id="1"
          data-rbd-draggable-id="2"
          draggable="false"
          role="button"
          tabindex="0"
        >
          <div
            aria-label="Item 2"
            class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters css-nxv30a-MuiButtonBase-root-MuiListItemButton-root"
            data-mui-internal-clone-element="true"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiListItemText-root css-tlelie-MuiListItemText-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-1bn3ev3-MuiTypography-root"
              >
                2
                _
                Item 2
              </span>
            </div>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </div>
        </div>
        <div
          aria-describedby="rbd-hidden-text-1-hidden-text-6"
          data-rbd-drag-handle-context-id="1"
          data-rbd-drag-handle-draggable-id="3"
          data-rbd-draggable-context-id="1"
          data-rbd-draggable-id="3"
          draggable="false"
          role="button"
          tabindex="0"
        >
          <div
            aria-label="Item 3"
            class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters css-nxv30a-MuiButtonBase-root-MuiListItemButton-root"
            data-mui-internal-clone-element="true"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiListItemText-root css-tlelie-MuiListItemText-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-1bn3ev3-MuiTypography-root"
              >
                3
                _
                Item 3
              </span>
            </div>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </div>
        </div>
        <div
          aria-describedby="rbd-hidden-text-1-hidden-text-6"
          data-rbd-drag-handle-context-id="1"
          data-rbd-drag-handle-draggable-id="4"
          data-rbd-draggable-context-id="1"
          data-rbd-draggable-id="4"
          draggable="false"
          role="button"
          tabindex="0"
        >
          <div
            aria-label="Item 4"
            class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters css-nxv30a-MuiButtonBase-root-MuiListItemButton-root"
            data-mui-internal-clone-element="true"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiListItemText-root css-tlelie-MuiListItemText-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-1bn3ev3-MuiTypography-root"
              >
                4
                _
                Item 4
              </span>
            </div>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
